// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textEmphasisStyle renders 0 1`] = `
Array [
  .c0 {
  text-emphasis-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisStyle renders function 1`] = `
Array [
  .c0 {
  text-emphasis-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisStyle renders invalid theme path 1`] = `
Array [
  .c0 {
  text-emphasis-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisStyle renders negative number 1`] = `
Array [
  .c0 {
  text-emphasis-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisStyle renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-emphasis-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-emphasis-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis-style: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis-style: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisStyle renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-emphasis-style: July;
  }
}

@media April {
  .c0 {
    text-emphasis-style: August;
  }
}

@media January {
  .c0 {
    text-emphasis-style: September;
  }
}

@media April {
  .c0 {
    text-emphasis-style: November;
  }
}

@media June {
  .c0 {
    text-emphasis-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-emphasis-style: July;
  }
}

@media April {
  .c0 {
    text-emphasis-style: August;
  }
}

@media January {
  .c0 {
    text-emphasis-style: September;
  }
}

@media April {
  .c0 {
    text-emphasis-style: November;
  }
}

@media June {
  .c0 {
    text-emphasis-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-emphasis-style: January;
  }
}

@media April {
  .c0 {
    text-emphasis-style: December;
  }
}

@media January {
  .c0 {
    text-emphasis-style: April;
  }
}

@media April {
  .c0 {
    text-emphasis-style: May;
  }
}

@media June {
  .c0 {
    text-emphasis-style: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-emphasis-style: January;
  }
}

@media April {
  .c0 {
    text-emphasis-style: December;
  }
}

@media January {
  .c0 {
    text-emphasis-style: April;
  }
}

@media April {
  .c0 {
    text-emphasis-style: May;
  }
}

@media June {
  .c0 {
    text-emphasis-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisStyle renders postitive number 1`] = `
Array [
  .c0 {
  text-emphasis-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisStyle renders string 1`] = `
Array [
  .c0 {
  text-emphasis-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisStyle renders valid theme path 1`] = `
Array [
  .c0 {
  text-emphasis-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
